pelenaca: Analitica Norte

--- a/destiny4.0/Norte/ilimitada_avanzada_300/resources/templates/index.hbs
+++ b/destiny4.0/Norte/ilimitada_avanzada_300/resources/templates/index.hbs
@@ -3,44 +3,7 @@
 <script>
 
 utag_data.default_plan = "vodafone one ilimitada avanzada 300Mbps"
-utag_data.plans_add2cart = [
-    {
-        "product_name": "vodafone one ilimitada avanzada 300Mbps",
-        "product_category": "movil+fibra",
-        "product_variant":"Datos y minutos ilimitados+300Mbps Fibra",
-        "promotion_price_name": "50% 6 meses norte one avanzada 300mb",
-        "promotion_gift_name": "",
-        "product_id": "",
-        "product_sale_type": "yes:transactional",
-
-        "product_additional_lines": [
-            {
-                "product_name": "tarifa movil ilimitada esencial",
-                "product variant":"datos ilimitados",
-                "product_category": "movil",
-                "promotion_price_name": "2 x 1 esencial gratis",
-                "promotion_gift_name": "",
-                "product_id": "268548230"
-            }],
-  "product_packs_tv": [{
-        "product_name": "pack universal",
-        "product_category": "tv",
-        "promotion_price_name": "universal gratis",
-        "promotion_gift_name": "",
-        "product_id": ""
-    }]
-    },
-    {
-"product_name": "vodafone one ilimitada avanzada 300Mbps",
-        "product_category": "movil+fibra",
-        "product_variant":"Datos y minutos ilimitados+300Mbps Fibra",
-        "promotion_price_name": "50% 6 meses norte one avanzada 300mb",
-        "promotion_gift_name": "",
-        "product_id": "",
-        "product_sale_type": "yes:transactional",
-    }
-
-]
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "50% 6 meses norte one avanzada 300mb", "promotion_gift_name": "", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":"268547964"}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "50% 6 meses norte one avanzada 300mb","promotion_gift_name": "","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": "268547964"}]}]
 </script>
 
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="maxi" style="visibility: hidden;opacity: 0">
