--- a/destiny4.0/Norte/ilimitada_plus_600/resources/templates/index.hbs
+++ b/destiny4.0/Norte/ilimitada_plus_600/resources/templates/index.hbs
@@ -1,51 +1,8 @@
 <link href="css/ws10.css" rel="stylesheet" />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss />
 <script>
-utag_data.default_plan = "vodafone one ilimitada plus 600Mbps"
-utag_data.plans_add2cart = [
-{
-    "product_name": "vodafone one ilimitada plus 600Mbps",
-    "product_category": "movil+fibra",
-    "product_variant": "datos y minutos ilimitados+600Mbps Fibra",
-    "promotion_price_name": "50% 6 meses Norte one plus 600mb",
-    "promotion_gift_name": "",
-    "product_id": "",
-    "product_detail": "",
-    "product_sale_type": "yes:transactional",
-    "product_additional_lines": [{
-        "product_name": "tarifa movil ilimitada esencial",
-                "product variant":"datos ilimitados",
-                "product_category": "movil",
-                "promotion_price_name": "2 x 1 esencial gratis",
-                "promotion_gift_name": "",
-                "product_id": "268548230"
-    }],
-    "product_packs_tv": [{
-        "product_name": "pack seriefans",
-        "product_category": "tv",
-        "promotion_price_name": "Seriefans incluido en ilimitada plus y one ilimitada plus",
-        "promotion_gift_name": "",
-        "product_id": ""
-    }]
-},
-{
-    "product_name": "vodafone one ilimitada plus 600Mbps",
-    "product_category": "movil+fibra",
-    "product_variant": "datos y minutos ilimitados+600Mbps Fibra",
-    "promotion_price_name": "50% 6 meses Norte one plus 600mb",
-    "promotion_gift_name": "",
-    "product_id": "",
-    "product_detail": "",
-    "product_sale_type": "yes:transactional",
-
-        "product_packs_tv": [{
-        "product_name": "pack seriefans",
-        "product_category": "tv",
-        "promotion_price_name": "Seriefans incluido en ilimitada plus y one ilimitada plus",
-        "promotion_gift_name": "",
-        "product_id": ""
-        }]
-}]
+utag_data.default_plan = "vodafone one ilimitada plus x2 600Mbps"
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra optica", "promotion_price_name": "50% 6 meses Norte Vodafone One ilimitada Plus x2 600Mbps", "promotion_gift_name": "", "product_id": "268548269", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "product_id": "" }], "product_packs_tv": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada plus x2 600mbps ilimitada total pack tv plus x2 series","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra optica","promotion_price_name": "50% 6 meses Norte Vodafone One ilimitada Plus x2 600Mbps","promotion_gift_name": "","product_id": "268548269","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "","product_category": "","promotion_price_name": "","promotion_gift_name": "","product_id": ""}]}]
 
 </script>
 
