--- a/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
@@ -1,45 +1,8 @@
 <link href="css/ws10.css" rel="stylesheet" />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss />
 <script>
-utag_data.default_plan = "vodafone one ilimitada avanzada 600Mbps"
-utag_data.plans_add2cart = [
-    {
-        "product_name": "vodafone one ilimitada avanzada 600Mbps",
-        "product_category": "movil+fibra",
-        "product_variant":"Datos y minutos ilimitados+600Mbps Fibra",
-        "promotion_price_name": "50% 6 meses norte one avanzada 600mb",
-        "promotion_gift_name": "",
-        "product_id": "",
-        "product_sale_type": "yes:transactional",
-
-        "product_additional_lines": [
-            {
-                "product_name": "tarifa movil ilimitada esencial",
-                "product variant":"datos ilimitados",
-                "product_category": "movil",
-                "promotion_price_name": "2 x 1 esencial gratis",
-                "promotion_gift_name": "",
-                "product_id": "268548230"
-            }],
-  "product_packs_tv": [{
-        "product_name": "pack universal",
-        "product_category": "tv",
-        "promotion_price_name": "universal gratis",
-        "promotion_gift_name": "",
-        "product_id": ""
-    }]
-    },
-    {
-"product_name": "vodafone one ilimitada avanzada 600Mbps",
-        "product_category": "movil+fibra",
-        "product_variant":"Datos y minutos ilimitados+600Mbps Fibra",
-        "promotion_price_name": "50% 6 meses norte one avanzada 600mb",
-        "promotion_gift_name": "",
-        "product_id": "",
-        "product_sale_type": "yes:transactional",
-    }
-
-]
+utag_data.default_plan = "vodafone one ilimitada plus 00Mbps"
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "50% 6 meses norte one plus 300mb", "promotion_gift_name": "", "product_id": "168446420", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack seriefans", "product_category": "tv", "promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada plus 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "50% 6 meses norte one plus 300mb","promotion_gift_name": "","product_id": "168446420","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack seriefans","product_category": "tv","promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus","promotion_gift_name": "","product_id": ""}]}]
 
 </script>
 
