--- a/destiny4.0/Norte/ilimitada_plus_600/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/Norte/ilimitada_plus_600/resources/templates/partials/cardRate.hbs
@@ -46,7 +46,9 @@
                                         data-analytics-category="{{ form.inputs.0.category }}"
                                         checked/>
                                     <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
-                                        data-js-vf-value="portability">
+                                        data-js-vf-value="portability"  data-analytics-element="{{ form.inputs.0.element }}"
+                                        data-analytics-context="{{ form.inputs.0.context }}"
+                                        data-analytics-category="{{ form.inputs.0.category }}">
                                         {{ form.inputs.0.label }}
                                     </label>
                                 </div>
@@ -56,7 +58,9 @@
                                         data-analytics-context="{{ form.inputs.1.context }}"
                                         data-analytics-category="{{ form.inputs.1.category }}" />
                                     <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
-                                        data-js-vf-value="newNumber">
+                                        data-js-vf-value="newNumber"  data-analytics-element="{{ form.inputs.1.element }}"
+                                        data-analytics-context="{{ form.inputs.1.context }}"
+                                        data-analytics-category="{{ form.inputs.1.category }}">
                                         {{ form.inputs.1.label }}
                                     </label>
                                 </div>
