--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/index.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/index.hbs
@@ -1,59 +1,8 @@
 <link href="css/ws10.css" rel="stylesheet" />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss />
 <script>
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "promo colectivos + promo 50% one ilimitada avanzada 300mbps", "promotion_gift_name": "", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "promotion_price_name": "datos ilimitados", "product_id": "" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":"268547964"}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "promo colectivos + promo 50% one ilimitada avanzada 300mbps","promotion_gift_name": "","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": "268547964"}]}]
 
-utag_data.plans_add2cart = [
-  {
-    product_name: "vodafone one ilimitada avanzada 300mbps",
-    product_category: "movil+fibra",
-    product_variant: "datos y minutos ilimitados+300mbps fibra",
-    promotion_price_name:
-      "promo colectivos + promo 50% one ilimitada avanzada 300mbps",
-    promotion_gift_name: "",
-    product_id: "168446368",
-    product_detail: "",
-    product_sale_type: "yes:transactional",
-    product_additional_lines: [
-      {
-        product_name: "tarifa movil ilimitada esencial",
-        product_category: "movil",
-        product_variant: "datos ilimitados",
-        promotion_price_name: "2 x 1 ilimitada esencial gratis",
-        promotion_gift_name: "",
-        product_id: "268548230",
-      },
-    ],
-    product_packs_tv: [
-      {
-        product_name: "pack universal",
-        product_category: "tv",
-        promotion_price_name: "universal gratis",
-        promotion_gift_name: "",
-        product_id: "",
-      },
-    ],
-  },
-  {
-    product_name: "vodafone one ilimitada avanzada 300mbps",
-    product_category: "movil+fibra",
-    product_variant: "datos y minutos ilimitados+300mbps fibra",
-    promotion_price_name:
-      "promo colectivos + promo 50% one ilimitada avanzada 300mbps",
-    promotion_gift_name: "",
-    product_id: "168446368",
-    product_detail: "",
-    product_sale_type: "yes:transactional",
-    product_packs_tv: [
-      {
-        product_name: "pack universal",
-        product_category: "tv",
-        promotion_price_name: "universal gratis",
-        promotion_gift_name: "",
-        product_id: "",
-      },
-    ],
-  },
-];
 
 </script>
 
