pelenaca: bugs plp masmovil

--- a/oferta/masmovil/plp/resources/templates/partials/banner50.hbs
+++ b/oferta/masmovil/plp/resources/templates/partials/banner50.hbs
@@ -1,5 +1,5 @@
 <!-- Sections Banner 50 -->
-<section class="vf-banner50 ws10-o-layout ws10-flex__align-items--center ws10-flex__justify--between ws10-u--pb8x">
+<section class="vf-banner50 ws10-u--mt8x ws10-o-layout ws10-flex__align-items--center ws10-flex__justify--between ws10-u--pb8x">
     <div class="vf-banner50__container1 ws10-o-layout__item ws10-u--1/2@desktop ws10-align--right">
           {{> picture banner50.img.[0]}}
     </div>
