--- a/oferta/masmovil/plp/resources/templates/partials/vodafoneOne.hbs
+++ b/oferta/masmovil/plp/resources/templates/partials/vodafoneOne.hbs
@@ -1,8 +1,8 @@
-<section class="vf-vodafone-one ws10-u--pt16x ws10-o-layout">
-    <h2 class="ws10-o-layout__item ws10-u-heading--4 ws10-u--pb8x">{{{vodafoneOne.section}}}</h2>
+<section class="vf-vodafone-one ws10-o-layout">
+    <h2 class="ws10-o-layout__item ws10-u-heading--3 ws10-u--pb8x">{{{vodafoneOne.section}}}</h2>
     <ul class="ws10-flex ws10-flex__wrap">
         {{#each vodafoneOne.item }}
-         <li class="ws10-o-layout__item ws10-u--p5x ws10-u--1/2@tablet ws10-u--1/4@desktop">
+         <li class="ws10-o-layout__item ws10-u--p5x ws10-u--pt0 ws10-u--pb0 ws10-u--1/2@tablet ws10-u--1/4@desktop">
                 <article class="ws10-c-feature-hifi">
                         <span class="ws10-c-feature-hifi__background">
                             <img src="{{svg}}" alt="{{alt}}">
