--- a/oferta/masmovil/plp/resources/templates/partials/cardRates.hbs
+++ b/oferta/masmovil/plp/resources/templates/partials/cardRates.hbs
@@ -1,4 +1,4 @@
-<section class="vf-rates ws10-u--pt8x ws10-u--pb8x">
+<section class="vf-rates ws10-u--pb8x">
     <div class="vf-rates__container ws10-o-layout ws10-flex__align-items--end ws10-flex__justify--center">
         {{#each cardRates }}
             {{> cardRate this }}
