Colectivos fixes analítica

--- a/destiny4.0/colectivos/ilimitada_avanzada_600/resources/templates/partials/sticky-bottom.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_600/resources/templates/partials/sticky-bottom.hbs
@@ -11,7 +11,7 @@
         <span class="ws10-c-card-rate-sticky__final-price">
           <span
             class="ws10-c-card-rate-sticky__final-price-value"
-          >{{{ offers.discountPrice }}}</span>
+          >{{{ offers.discountPrice }}}€</span>
           <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
         </span>
       </div>
