Colectivos fix timeLine

--- a/destiny4.0/colectivos/plp/resources/templates/index.hbs
+++ b/destiny4.0/colectivos/plp/resources/templates/index.hbs
@@ -10,7 +10,7 @@
 		{{!-- Section Rates --}}
 		{{> rates }}
 		{{!-- PASOS --}}
-		{{> timeline }}
+		{{> timeLine }}
 	</div>
 	{{!-- BACKDROPS --}}
 	{{> backdrop-filete }}
