--- a/oferta/euskaltel/tarifa-2/resources/templates/index.hbs
+++ b/oferta/euskaltel/tarifa-2/resources/templates/index.hbs
@@ -1,41 +1,7 @@
 <link href="css/ws10.css" rel="stylesheet"  />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 <script>
-    utag_data.default_plan = "vodafone one ilimitada"
-    utag_data.plans_list = [{
-        "product_name": "vodafone one ilimitada",
-        "product_category": "movil+fibra",
-        "product_variant": "datos y minutos ilimitados+600Mbps Fibra",
-        "promotion_price_name": "promo mas movil euskaltel multilinea",
-        "promotion_gift_name": "",
-        "product_id": " ",
-        "product_detail": "",
-        "product_sale_type": "yes:transactional",
-        "product_additional_lines": [{
-            "product_name": "tarifa movil ilimitada",
-            "product_category": "movil",
-            "promotion_price_name": "2 x 1 ilimitada:cliente 50% Línea Adicional Ilimitada",
-            "promotion_gift_name": "2 x 1 ilimitada:cliente 50% Línea Adicional Ilimitada",
-        "product_id": "268547822"
-    }],
-    }]
-    utag_data.plans_add2cart =[{
-        "product_name": "vodafone one ilimitada",
-        "product_category": "movil+fibra",
-        "product_variant": "datos y minutos ilimitados+600Mbps Fibra",
-        "promotion_price_name": "promo mas movil euskaltel multilinea",
-        "promotion_gift_name": "",
-        "product_id": " ",
-        "product_detail": "",
-        "product_sale_type": "yes:transactional",
-        "product_additional_lines": [{
-            "product_name": "tarifa movil ilimitada",
-            "product_category": "movil",
-            "promotion_price_name": "2 x 1 ilimitada:cliente 50% Línea Adicional Ilimitada",
-            "promotion_gift_name": "2 x 1 ilimitada:cliente 50% Línea Adicional Ilimitada",
-            "product_id": "268547822"
-        }]
-    }]
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo euskaltel_mas movil_ multilinea_D4", "promotion_gift_name": "", "product_id": "168446377", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "", "promotion_price_name": "datos ilimitados", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo euskaltel_mas movil_ multilinea_D4","promotion_gift_name": "","product_id": "168446377","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "","product_category": "","promotion_price_name": "","promotion_gift_name": "","product_id": ""}]}];
 </script>
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="tarifa-2-e" style="visibility: hidden;opacity: 0">
 
