--- a/oferta/euskaltel/tarifa-3/resources/templates/index.hbs
+++ b/oferta/euskaltel/tarifa-3/resources/templates/index.hbs
@@ -1,59 +1,7 @@
 <link href="css/ws10.css" rel="stylesheet"  />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 <script>
-    utag_data.default_plan = "vodafone one ilimitada maxi"
-    utag_data.plans_list = [{
-        "product_name": "vodafone one ilimitada maxi",
-        "product_category": "movil+fibra",
-        "product_variant": "datos y minutos ilimitados+600Mbps Fibra",
-        "promotion_price_name": "promo euskaltel multilinea tv",
-        "promotion_gift_name": "",
-        "product_id": "168445333",
-        "product_detail": "",
-        "product_sale_type": "yes:transactional",
-        "product_additional_lines": [{
-            "product_name": "tarifa movil ilimitada",
-            "product_category": "movil",
-            "promotion_price_name": "2 x 1 ilimitada:cliente 50% linea adicional ilimitada",
-            "promotion_gift_name": "2 x 1 ilimitada:cliente 50% linea adicional ilimitada",
-            "product_id": "268547435"
-        }],
-        "product_packs_tv": [{
-            "product_name": "pack seriefans",
-            "product_category": "tv",
-            "promotion_price_name": "promo euskatel multilinea TV",
-            "promotion_gift_name": "",
-            "product_id": "268547425"
-        }]
-    }]
-    
-
-    utag_data.plans_add2cart =[{
-
-    "product_name": "vodafone one ilimitada maxi",
-        "product_category": "movil+fibra",
-        "product_variant": "datos y minutos ilimitados+600Mbps Fibra",
-        "promotion_price_name": "promo euskaltel multilinea tv",
-        "promotion_gift_name": "",
-        "product_id": "168445333",
-        "product_detail": "",
-        "product_sale_type": "yes:transactional",
-        "product_additional_lines": [{
-            "product_name": "tarifa movil ilimitada",
-            "product_category": "movil",
-            "promotion_price_name": "2 x 1 ilimitada:cliente 50% linea adicional ilimitada",
-            "promotion_gift_name": "2 x 1 ilimitada:cliente 50% linea adicional ilimitada",
-            "product_id": "268547435"
-        }],
-        "product_packs_tv": [{
-            "product_name": "pack seriefans",
-            "product_category": "tv",
-            "promotion_price_name": "Promo de -10€",
-            "promotion_gift_name": "",
-            "product_id": "268547964"
-        }]
-    }]
-
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo euskatel_mas movil multilinea tv_D4", "promotion_gift_name": "", "product_id": "168446377", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada avanzada", "product_category": "", "promotion_price_name": "datos ilimitados", "product_id": "268548231" }], "product_packs_tv": [{ "product_name": "pack seriefans", "product_category": "tv", "promotion_price_name": "seriefans gratis_euskatel_masmovil", "promotion_gift_name": "", "product_id":"268547130"}]},{"product_name": "vodafone one ilimitada avanzada 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo euskatel_mas movil multilinea tv_D4","promotion_gift_name": "","product_id": "168446377","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack seriefans","product_category": "tv","promotion_price_name": "seriefans gratis_euskatel_masmovil","promotion_gift_name": "","product_id": "268547130"}]}];
 </script>
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="tarifa-3-e" style="visibility: hidden;opacity: 0">
     <!-- BANNER & DIV TICKET QUE INYECTA WCS -->
