--- a/oferta/masmovil/tarifa-1/resources/templates/partials/sticky.hbs
+++ b/oferta/masmovil/tarifa-1/resources/templates/partials/sticky.hbs
@@ -4,11 +4,18 @@
             <div class="ws10-c-card-rate-sticky__offer ws10-flex ws10-flex__direction--column">
                 <del class="ws10-c-card-rate-sticky__dto-price">54,99€/mes</del>
                 <span class="ws10-c-card-rate-sticky__final-price">
-                              <span class="ws10-c-card-rate-sticky__final-price-value">39,99€</span>
-                              <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
-                            </span>
+                    <span class="ws10-c-card-rate-sticky__final-price-value">39,99€</span>
+                    <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
+                </span>
             </div>
-            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1211327&tcli=0&tta=1" name="cta" title="Lo quiero" class="ws10-c-button ws10-c-button--auto" onmousedown="addtocart(utag_data.plans_add2cart)" data-analytics-context="lo quiero" data-analytics-element="stiky inferior" data-analytics-category="cta" data-analytics-id="-0452126843438">
+            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1211327&tcli=0&tta=1"
+                name="cta" title="Lo quiero"
+                class="ws10-c-button ws10-c-button--auto"
+                onmousedown="addtocart(utag_data.plans_add2cart)[0]"
+                data-analytics-context="lo quiero"
+                data-analytics-element="stiky inferior"
+                data-analytics-category="cta"
+                data-analytics-id="-0452126843438">
                 Lo quiero
             </a>
         </div>
