--- a/oferta/euskaltel/tarifa-2/resources/templates/partials/sticky.hbs
+++ b/oferta/euskaltel/tarifa-2/resources/templates/partials/sticky.hbs
@@ -8,7 +8,14 @@
                     <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
                 </span>
             </div>
-            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1211102&tcli=0&tta=1" name="cta" title="Lo quiero" class="ws10-c-button ws10-c-button--auto" onmousedown="addtocart(utag_data.plans_add2cart)" data-analytics-context="lo quiero" data-analytics-element="stiky inferior" data-analytics-category="cta" data-analytics-id="-3207837130858">
+            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1211102&tcli=0&tta=1"
+                name="cta" title="Lo quiero"
+                class="ws10-c-button ws10-c-button--auto"
+                onmousedown="addtocart(utag_data.plans_add2cart[0])"
+                data-analytics-context="lo quiero"
+                data-analytics-element="stiky inferior"
+                data-analytics-category="cta"
+                data-analytics-id="-3207837130858">
                 Lo quiero
             </a>
         </div>
