--- a/oferta/masmovil/tarifa-1/resources/templates/index.hbs
+++ b/oferta/masmovil/tarifa-1/resources/templates/index.hbs
@@ -1,28 +1,9 @@
 <link href="css/ws10.css" rel="stylesheet"  />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 <script>
-    utag_data.default_plan = "vodafone one ilimitada"
-    utag_data.plans_list = [{
-        "product_name": "vodafone one ilimitada",
-        "product_category": "movil+fibra",
-        "product_variant": "datos y minutos ilimitados+300Mbps Fibra",
-        "promotion_price_name": "promo mas movil monolinea",
-        "promotion_gift_name": "",
-        "product_id": "168445702",
-        "product_detail": "",
-        "product_sale_type": "yes:transactional"
-    }]
-    utag_data.plans_add2cart =[{
-        "product_name": "vodafone one ilimitada",
-        "product_category": "movil+fibra",
-        "product_variant": "datos y minutos ilimitados+300Mbps Fibra",
-        "promotion_price_name": "promo mas movil monolinea",
-        "promotion_gift_name": "",
-        "product_id": "168445702",
-        "product_detail": "",
-        "product_sale_type": "yes:transactional",
-    }]
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "promo euskatel_ masmovil_ monolinea_ 300Mbps_D4", "promotion_gift_name": "", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "product_id": "" }], "product_packs_tv": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "promo euskatel_ masmovil_ monolinea_ 300Mbps_D4","promotion_gift_name": "","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "","product_category": "","promotion_price_name": "","promotion_gift_name": "","product_id": ""}]}];
 </script>
+
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="tarifa-1-mm" style="visibility: hidden;opacity: 0">
 
     <!-- BANNER & DIV TICKET QUE INYECTA WCS -->
