--- a/oferta/masmovil/tarifa-3/resources/templates/partials/banner.hbs
+++ b/oferta/masmovil/tarifa-3/resources/templates/partials/banner.hbs
@@ -99,7 +99,14 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1211324&tcli=0&tta=1" type="submit" name="cta" title="Lo quiero" class="ws10-c-button ws10-c-button--auto" onmousedown="addtocart(utag_data.plans_add2cart)" data-analytics-context="lo quiero" data-analytics-element="ficha convergente" data-analytics-category="cta" data-analytics-id="-5867167085964">
+                                    <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1211324&tcli=0&tta=1"
+                                        type="submit" name="cta" title="Lo quiero"
+                                        class="ws10-c-button ws10-c-button--auto"
+                                        onmousedown="addtocart(utag_data.plans_add2cart[0])"
+                                        data-analytics-context="lo quiero"
+                                        data-analytics-element="cardrate"
+                                        data-analytics-category="cta"
+                                        data-analytics-id="-5867167085964">
                                         Lo quiero
                                     </a>
                                 </div>
