--- a/oferta/masmovil/tarifa-2/resources/templates/partials/banner.hbs
+++ b/oferta/masmovil/tarifa-2/resources/templates/partials/banner.hbs
@@ -66,6 +66,21 @@
                                             </p>
                                         </div>
                                     </li>
+                                    <li class="ws10-c-card-rate__product-info-item">
+                                       <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
+                                               xmlns="http://www.w3.org/2000/svg"
+                                               xmlns:xlink="http://www.w3.org/1999/xlink">
+                                           <use xlink:href="#icon-tv"></use>
+                                       </svg>
+                                       <div class="ws10-c-card-rate__product">
+                                           <p class="ws10-c-card-rate__product-title">
+                                               Pack TV Universal GRATIS
+                                           </p>
+                                           <p class="ws10-c-card-rate__product-txt">
+                                               AMC, Eurosport 1 y hasta 30 canales
+                                           </p>
+                                       </div>
+                                   </li>
                                 </ul>
                                 <div class="ws10-c-card-rate__w-cta" data-js-vf="_showOrHideSticky">
                                     <div class="ws10-c-card-rate__w-offers">
