--- a/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/cardRate.hbs
@@ -9,8 +9,7 @@
                         data-vfes-seo-empathy-price="{{ offers.dtoFinalPrice }}">
                         {{#each description }}
                         <li class="ws10-c-card-rate__product-info-item" {{#if js-vf }} data-js-vf="{{ js-vf }}" {{/if }}>
-                            <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
-                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <use xlink:href="#{{ icon }}"></use>
                             </svg>
                             <div class="ws10-c-card-rate__product">
@@ -20,9 +19,7 @@
                                 <p class="ws10-c-card-rate__product-txt {{#if color }} {{ color }} {{/if }}">
                                     {{ subtitle }}
                                     {{#if secondIcon }}
-                                    <svg class="ws10-c-card-rate__product-txt-icon"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <svg class="ws10-c-card-rate__product-txt-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <use xlink:href="#{{ secondIcon }}"></use>
                                     </svg>
                                     {{/if }}
