--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/carousel-list.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/carousel-list.hbs
@@ -3,21 +3,11 @@
         <div class="ws10-c-card-addons">
         <div class="ws10-c-card-addons__box">
             {{#if src }}
-            <img
-                class="ws10-u--pr1x"
-                src="{{src}}"
-                alt="{{alt}}"
-                />
+            <img class="ws10-u--pr1x" src="{{src}}" alt="{{alt}}"/>
             {{else }}
-            <svg
-              class="ws10-u--pr1x"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="48px"
-              height="48px"
-            >
-              <title>{{alt}}</title>
-              <use xlink:href="{{svg}}"></use>
+            <svg class="ws10-u--pr1x" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48px" height="48px">
+                <title>{{alt}}</title>
+                <use xlink:href="{{svg}}"></use>
             </svg>
             {{/if }}
             <h3 class="ws10-c-card-addons__title">{{{title}}}</h3>
@@ -26,4 +16,4 @@
         <p class="ws10-c-card-addons__paragraph">{{{conditions}}}</p>
         </div>
     </div>
-    </li>
+</li>
