--- a/destiny4.0/colectivos/plp-search-code/resources/templates/index.hbs
+++ b/destiny4.0/colectivos/plp-search-code/resources/templates/index.hbs
@@ -2,10 +2,8 @@
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss />
 <div class="vfes-ms-content" id="plp-search-code" style="visibility: hidden;opacity: 0">
 	<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp-codigo">
-		{{!-- Filete cliente --}}
-		<section class="vf-cliente ws10-u-color--bg-dark-grey ws10-align--center ws10-u--p2x">
-			<p class="ws10-u-color--white ws10-u--mb0"><strong>Si ya eres cliente</strong> y quieres beneficiarte de este descuento, <a class="ws10-u-color--white" data-backdrop="icon-backdrop" data-backdrop-close aria-haspopup="dialog" data-analytics-category="cta" data-anaytics-element="cintillo" data-analytics-conext="informate aqui" data-analytics-id="-3753969986503">infórmate aquí </a></p>
-		</section>
+		{{!-- Cliente --}}
+		{{> cliente }}
 		{{!-- BANNER --}}
 		<section class="vf-banner ws10-u--1/1">
 			<div class="ws10-o-wrapper">
@@ -34,7 +32,7 @@
 											placeholder="" />
 										<label for="searchCode" class="code ws10-c-text-field__label">Introduce tu código
 											aquí</label>
-										
+
 										<button type="button" title="Borrar"
 											class="ws10-c-text-field__button ws10-c-text-field__button--close vfms-text-clean"
 											aria-hidden="true">
@@ -46,8 +44,8 @@
 											</svg>
 										</button>
 										<span class="ws10-c-text-field__helperText ws10-u--hidden" id="labelinput4" aria-labelledby="labelinput1" data-js-vf="error-text">Código inválido</span>
-																		
-									</div>				
+
+									</div>
 								</div>
 								<button name="cta" title="CTA"
 									class="ws10-c-button vfms-button__search"
@@ -57,7 +55,6 @@
 								</button>
 							</div>
 						</form>
-						
 
 						<!--  OK  -->
 						<div id="modalok" class="ws10-c-backdrop js-backdrop" data-ws10-js="backdrop" aria-hidden="true"
@@ -78,9 +75,7 @@
 
 								<div id="codeFind"
 									class="ws10-c-backdrop__content js-backdrop-content ws10-align--center ws10-u--pt16x">
-
 									<span class="ws10-c-icon ws10-flex__justify--center">
-
 										<img src="img/svg/icons-indicators-hi-fi-icons-tick-green-light-theme.svg"
 											class="IconsIndicators-HiFi-Icons-warning-light_theme ws10-u--1/6 ">
 									</span>
@@ -120,12 +115,8 @@
 									</button>
 								</div>
 
-
-								<div id="noFoundCode"
-									class="ws10-c-backdrop__content js-backdrop-content ws10-align--center ws10-u--pt16x">
-
+								<div id="noFoundCode" class="ws10-c-backdrop__content js-backdrop-content ws10-align--center ws10-u--pt16x">
 									<span class="ws10-c-icon ws10-flex__justify--center">
-
 										<img src="img/svg/icons-indicators-hi-fi-icons-warning-light-theme.svg"
 											class="IconsIndicators-HiFi-Icons-warning-light_theme ws10-u--1/6 ">
 									</span>
@@ -144,15 +135,12 @@
 								</div>
 							</section>
 						</div>
-						
 					</div>
-					
 				</div>
 				<div class="ws10-o-layout__item ws10-u--4/5@desktop ws10-u--4/5@tablet">
 					<!-- TIMELINE  -->
 					<section class="vf-timeline ws10-u--pt12x ">
-						<h3 class="ws10-u-heading--4 ws10-u--mb8x"><strong>¿Cómo conseguir mi descuento de
-								colectivo?</strong></h3>
+						<h3 class="ws10-u-heading--4 ws10-u--mb8x"><strong>¿Cómo conseguir mi descuento de colectivo?</strong></h3>
 						<ul class="ws10-c-timeline-steps">
 							<li class="ws10-c-timeline-steps__item">
 								<svg class="ws10-c-timeline-steps__icon" xmlns='http://www.w3.org/2000/svg'
@@ -161,9 +149,7 @@
 									<use xlink:href='#icon-shopping-trolley-mid'></use>
 								</svg>
 								<p class="ws10-c-timeline-steps__title">Compra online</p>
-								<p class="ws10-c-timeline-steps__text">Recibirás un email de confirmación con el detalle
-									de
-									tu pedido y próximos pasos.</p>
+								<p class="ws10-c-timeline-steps__text">Recibirás un email de confirmación con el detalle de tu pedido y próximos pasos.</p>
 							</li>
 							<li class="ws10-c-timeline-steps__item">
 								<svg class="ws10-c-timeline-steps__icon" xmlns='http://www.w3.org/2000/svg'
@@ -172,9 +158,7 @@
 									<use xlink:href='#icon-engineer-mid'></use>
 								</svg>
 								<p class="ws10-c-timeline-steps__title">Cita de instalación</p>
-								<p class="ws10-c-timeline-steps__text">Una vez contratado, un experto se pondrá en
-									contacto
-									contigo para concretar la fecha de instalación que más te convenga. ¡Tú eliges!</p>
+								<p class="ws10-c-timeline-steps__text">Una vez contratado, un experto se pondrá en contacto contigo para concretar la fecha de instalación que más te convenga. ¡Tú eliges!</p>
 							</li>
 							<li class="ws10-c-timeline-steps__item">
 								<svg class="ws10-c-timeline-steps__icon" xmlns='http://www.w3.org/2000/svg'
@@ -183,9 +167,7 @@
 									<use xlink:href='#icon-calendar-mid'></use>
 								</svg>
 								<p class="ws10-c-timeline-steps__title">Día de instalación</p>
-								<p class="ws10-c-timeline-steps__text">El técnico llevará el router y el decodificador
-									si
-									has contratado TV. Lo tendrás todo listo en unas 2h (WiFi y TV).</p>
+								<p class="ws10-c-timeline-steps__text">El técnico llevará el router y el decodificador si has contratado TV. Lo tendrás todo listo en unas 2h (WiFi y TV).</p>
 							</li>
 							<li class="ws10-c-timeline-steps__item">
 								<svg class="ws10-c-timeline-steps__icon" xmlns='http://www.w3.org/2000/svg'
@@ -194,11 +176,7 @@
 									<use xlink:href='#icon-business-mid'></use>
 								</svg>
 								<p class="ws10-c-timeline-steps__title">Portabilidad</p>
-								<p class="ws10-c-timeline-steps__text"> Recibirás un SMS con la fecha y lugar de tu
-									nueva
-									SIM del móvil, así sabrás el día exacto del cambio. Nos aseguramos de que no te
-									quedas
-									sin línea.</p>
+								<p class="ws10-c-timeline-steps__text"> Recibirás un SMS con la fecha y lugar de tu nueva SIM del móvil, así sabrás el día exacto del cambio. Nos aseguramos de que no te quedas sin línea.</p>
 							</li>
 							<li class="ws10-c-timeline-steps__item">
 								<svg class="ws10-c-timeline-steps__icon" xmlns='http://www.w3.org/2000/svg'
@@ -207,9 +185,7 @@
 									<use xlink:href='#icon-unified-communication-mid'></use>
 								</svg>
 								<p class="ws10-c-timeline-steps__title">Mi Vodafone</p>
-								<p class="ws10-c-timeline-steps__text">Podrás registrarte y hacer seguimiento de tu
-									pedido y
-									gestionar tus servicios de Vodafone.</p>
+								<p class="ws10-c-timeline-steps__text">Podrás registrarte y hacer seguimiento de tu pedido y gestionar tus servicios de Vodafone.</p>
 							</li>
 						</ul>
 					</section>
